--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,6 @@ body {
 
 /* ******************************
  *
- * Utilities
- *
- * ****************************** */
-
-
-
-/* ******************************
- *
  * Components
  *
  * ****************************** */
@@ -87,6 +79,7 @@ body {
     padding: 2rem 0;
     position: fixed;
     width: inherit;
+    z-index: 9999;
 }
 
 .logo {
@@ -106,7 +99,7 @@ body {
     margin-left: auto;
 }
 
-.nav-link {
+.main-nav li {
     display: inline;
     font-size: 1.6rem;
     font-weight: 300;
@@ -114,19 +107,18 @@ body {
     text-transform: uppercase;
 }
 
-.nav-link:last-child {
+.main-nav li:last-child {
     margin-right: 0;
 }
 
-.nav-link a:link,
-.nav-link a:visited {
+.nav-link:link,
+.nav-link:visited {
     color: currentColor;
     text-decoration: none;
 }
 
-/* TODO: Change colors once color scheme is decided upon */
-.nav-link a:hover,
-.nav-link a:active {
+.nav-link:hover,
+.nav-link:active {
     border-bottom: 2px solid #f4f407;
     color: black;
     text-decoration: none;
@@ -227,13 +219,17 @@ body {
 
 .price-cards {
     display: flex;
+    width: 85rem;
 }
 
 .price-card {
-    background-color: yellow;
+    background-color: #fff;
+    border: 1px solid #000;
     border-radius: 1rem;
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
     margin-right: 2.5rem;
+    overflow: hidden;
     text-align: center;
     width: 33.3%;
 }
@@ -242,8 +238,114 @@ body {
     margin-right: 0;
 }
 
+.card-header {
+    background-color: #eee;
+    border-bottom: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2rem;
+}
+
+.card-price {
+    font-family: 'Merriweather', serif;
+    font-size: 4rem;
+}
+
+.card-price:before {
+    bottom: .8rem;
+    color: #777;
+    content: "$";
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem;
+    position: relative;
+    right: .5rem
+}
+
+.subscription:after {
+    color: #777;
+    content: "/month";
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem;
+    position: relative;
+    left: .5rem;
+    top: .5rem;
+}
+
+.header-highlighted {
+    background-color: #f4f407;
+}
+
 .card-heading {
     font-size: 2rem;
     font-weight: 300;
+    margin-bottom: 1.5rem;
     text-transform: uppercase;
+}
+
+.card-features {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    list-style: none;
+    padding: 2rem;
+    text-align: left;
+}
+
+.card-btn {
+    margin: auto 2rem 2rem 2rem;
+}
+
+@media screen and (max-width: 800px) {
+    .price-cards {
+        flex-direction: column;
+    }
+
+    .price-card {
+        margin: 0 auto 1.5rem auto;
+    }
+
+    .price-card:last-child {
+        margin: 0 auto;
+    }
+}
+
+/* ******************************
+ *
+ * Newsletter
+ *
+ * ****************************** */
+
+.newsletter {
+    margin: 7rem 0;
+}
+
+.signup-box {
+    background-color: #fff;
+    border: 1.5rem solid #f4f407;
+    border-radius: 1rem;
+    padding: 6rem;
+    text-align: center;
+}
+
+.newsletter-textinput {
+    height: 3rem;
+    width: 30rem;
+}
+
+/* ******************************
+ *
+ * Footer
+ *
+ * ****************************** */
+
+.footer {
+    background-color: #333;
+    color: #ddd;
+    line-height: 1.8;
+    padding: 2rem;
+    text-align: center;
+}
+
+.footer a {
+    color: currentColor;
 }
